# sac-kan

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  cli.py  configs.py  evaluate.py  main.py  pyproject.toml  requirements.txt  run_experiments.sh  setup.cfg  trainer_handler.py  utils.py
runs/Mujoco-v5__sac_continuous_action__1__1740426468/: events.out.tfevents.1740426468.desktone.246523.0
sac/: __init__.py  buffer.py  main.py  networks.py  sac_continuous_action_kan.py  sac_torch.py  utils.py
sac_kan/: buffer.py  sac_continuous_action.py  sac_continuous_action_kan.py  sac_torch.py
scripts/: local_setup.sh  setup.sh
